# plasma-etching-code

./: .gitignore  API_SCOPE.md  ARDE_LEGACY_UNIFIED_RECONCILIATION_2026-07-15.md  ARDE_PHYSICS_REFERENCE.md  AUTONOMOUS_PROGRESS.md  BOSCH_BENCHMARK_SPEC.md  CHARGING_C3_CLOSURE_AUDIT_2026-07-14.md  CHARGING_C3_Q1_COMPATIBILITY_AUDIT_2026-07-14.md  CHARGING_COEVOLUTION_C1_C2_AUDIT_2026-07-13.md  CHARGING_COEVOLUTION_C3_AUDIT_2026-07-13.md  CHARGING_DEEP_ISSUES.md  CHARGING_DISCRETIZATION_DESIGN.md  CHARGING_PHYSICS_CLOSURE_AUDIT_2026-07-13.md  CHARGING_PHYSICS_PLAN.md  CHARGING_POISSON_PLAN.md  CHARGING_SOLVER_CAMPAIGN_2026-07-13.md  CHEMISTRY_EXPANSION_PLAN.md  CHEMISTRY_FRONTIER_ALE.md  CLAUDE_CODE_HANDOFF_2026-07-12.md  CODEX_HANDOFF_2026-07-12.md  CONVERGENCE_CONTRACT_AMENDMENT.md  CONVERGENCE_CONTRACT_R3_REVIEW_REQUEST.md  DEBOER_DIVERGENCE.md  DEEP_BREAKDOWN.md  EDGE_OPEN_GEOMETRY_PLAN.md  END_STATE_VERIFICATION.md  ENGINE_RUNTIME_FAILURE_POLICY.md  EXPERIMENTAL_VALIDATION_MATRIX.md  FINDINGS.md  FLOOR_OVERCHARGE_FINDING.md  FRONTIER_LOOP.md  GPU_CAMPAIGN.md  HANDOFF_PLAN.md  HG_JAP97_TARGETS.md  HG_RESIDUAL_HUNT.md  JEONG_2023_REACTOR_CLOSURE_AUDIT_2026-07-16.md  LICENSE  LOCAL_HISTORY_RECONCILIATION.md  LOCAL_RESULT_ARTIFACT_INDEX_2026-07-16.json  METHODS_FRONTIER.md  (+32 more)
Plasma Chemistry Interaction Proof/: feature_etch.py  run_benchmark.py  summary.json
box_results/: best_config_result.json  head_to_head_result.json  nfp_convergence_result.json  profile_steps_result.json  reinit_speed_result.json  vps_sweep_result.json
docs/: acceleration.html  charging.html  comparison.html  differentiable-ml.html  experimental-validation.html  flux-transport.html  index.html  multiscale.html  numerics.html  performance.html  physics-grounding.html  physics.html  processes.html  references.bib  references.html  report.html  sota-and-plan.html  style.css  viennaps-validation.html  what-petch-does.html
examples/: etch_hole.py
harness/: benchmark.py  convergence.py
refs/: HG_deep_read.md
results/: README.md
scripts/: accuracy_sweep.py  ale_calibrate.py  ale_window.py  analyze_charging_jacobian.py  arde_mc_reference.py  arde_static.py  audit_charging_coevolution_c1_c2.py  audit_charging_coevolution_c3.py  backward_actual_field_reciprocity.py  backward_charge_demo.py  backward_hg_validate.py  bench_matrix.py  best_config_speed_3d.py  beta_sweep_3d.py  bosch_scallops.py  cal_F_sweep_3d.py  charging_ar4_jacobian_campaign.py  charging_c3_campaign_bound_watcher.py  charging_c3_closure_mode_audit.py  charging_c3_ensemble_current_audit.py  charging_c3_equilibrium_response_audit.py  charging_c3_periodic_preflight.py  charging_c3_periodic_terminal_audit.py  charging_c3_periodic_topology_audit.py  charging_c3_projective_ptc_proposal.py  charging_c3_projective_ptc_score_audit.py  charging_c3_q1_compatibility_audit.py  charging_first_principles.py  (+164 more)
(+472 files in other folders)
