[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petch"
version = "0.3.0"
description = "Fast, differentiable 3D plasma-etch simulator: GPU level-set + MC/deterministic flux transport, ~8-15x faster than ViennaPS (CPU-dependent), wafer-validated Knudsen deep-AR option"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-fmm",
    "scikit-image",
    "warp-lang>=1.13",
    "numba",
    "matplotlib",
]

[project.optional-dependencies]
# cupy gives the GPU edge-adjacency sort (a small extra speedup on big meshes); needs CUDA 12.x.
gpu = ["cupy-cuda12x"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]
